Fix overflow, arrow direction of collapsible bar

--- a/src/components/CollapsibleBar.scss
+++ b/src/components/CollapsibleBar.scss
@@ -35,4 +35,8 @@
       }
     }
   }
+
+  &__content {
+    overflow: hidden;
+  }
 }
